--- a/index.html
+++ b/index.html
@@ -21,9 +21,28 @@
     <div class="row" id="latest-news">
       <div class="col-md-12">
         <h3 class="heading">Latest Mars News</h3>
-        <small>{{listings.housing}}</small>
+        <p>{{mars_info.news}}</p>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-md-7" id="featured_image" style="background-color: blue;">
+        <img src="mars_info.featured_image" alt="Featured Image" width="800" height="800">
+      </div>
+
+      <div class="col-md-1" style="background-color:red;">
+
+      </div>
+
+      <div class="col-md-4" style="background-color:green;">
+        <h4>Mars Facts</h4>
+        <p>{{mars_info.facts}}</p>
+      </div>
+
+       
+    </div>
+
+    
 
   </div>
 </body>
